[package]
name = "tfbs"
version = "0.1.0"
authors = ["Jose Geraldo de Carvalho Pereira <zgcarvalho@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
#bio = "0.33"
#bio = { path = "../rust-bio" }
#ndarray= ">=0.13, <=0.14"
